k8s/ingress/02-my-boutique-docs-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boutique-docs-ingress
  namespace: my-boutique
  annotations:
    # This ensures the trailing slashes and paths are handled correctly
    nginx.ingress.kubernetes.io/use-regex: "true"
    # This captures the part after /v3/api-docs/ and throws it away,
    # sending only /v3/api-docs to the actual pod.
    nginx.ingress.kubernetes.io/rewrite-target: /v3/api-docs
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        # --- PRODUCT SERVICE ---
        - path: /v3/api-docs/product-service
          pathType: ImplementationSpecific
          backend:
            service:
              name: product-service
              port:
                number: 8080

        # --- ORDER SERVICE ---
        - path: /v3/api-docs/order-service
          pathType: ImplementationSpecific
          backend:
            service:
              name: order-service
              port:
                number: 8080

        # --- CUSTOMER SERVICE ---
        - path: /v3/api-docs/customer-service
          pathType: ImplementationSpecific
          backend:
            service:
              name: customer-service
              port:
                number: 8080
